# metalcrow-nn

./: .cursorignore  .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  Makefile  MetalCrow Landing.html  README.md  SETUP.md  compose.override.yml  compose.prod.yml  compose.yml  package-lock.json  pyproject.toml  skills-lock.json
OTHER_REPOS/nornickel-2026-parser/ADVANCE_RAG/: .dockerignore  .env.example  Dockerfile  ISSUES.md  Makefile  README.md  STUBS.md  admin_panel.py  config.yaml  docker-compose.yml  load_model.sh  panel-docker.sh  panel.sh  pyproject.toml  reindex.sh  rerun.sh  start.sh  stop.sh  try_chroma.py
OTHER_REPOS/nornickel-2026-parser/ADVANCE_RAG/app/: __init__.py  main.py  mcp_server.py  worker_main.py
OTHER_REPOS/nornickel-2026-parser/ADVANCE_RAG/docs/: ADMIN_PANEL.md  DOCUMENTATION_REQUIREMENTS.md  LAYER_CONFIG.md  LAYER_DATA.md  LAYER_INFRASTRUCTURE.md  LAYER_PRESENTATION.md  LAYER_SERVICES.md  MCP_SERVER.md  MCP_SERVER_TEST.md  SPECIFICATION.md  TESTING.md
OTHER_REPOS/nornickel-2026-parser/ADVANCE_RAG/examples/: config.yaml  langchain_agent_example.py  langchain_from_mcp_example.py  local_tools.py  mcp_client_example.py
OTHER_REPOS/nornickel-2026-parser/ADVANCE_RAG/tests/: conftest.py
benchmark/: .gitignore  README.md  __init__.py  client.py  config.py  dataset.py  evaluators.py  llm_judge.py  models.py  pyproject.toml  report.py  requirements.txt  run.ps1  run.py  scoring.py
benchmark/data/: questions.yaml  seed_questions.yaml
benchmark/scripts/: build_dataset.py
benchmark/tests/: test_dataset.py  test_evaluators.py  test_scoring.py
services/article-fetcher/: .env.example  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml
services/article-fetcher/app/: config.py  cyberleninka.py  europepmc.py  fetcher.py  headless_downloader.py  headless_solver_cli.py  main.py  openalex.py  openalex_downloader.py  pdf_validate.py  scidb_downloader.py  stc_downloader.py  storage.py  url_guard.py
services/article-fetcher/scripts/: scidb_coverage.py
services/article-fetcher/tests/: conftest.py  test_config.py  test_cyberleninka.py  test_direct_url_fetch.py  test_doi_normalize.py  test_europepmc_fallback.py  test_fetcher.py  test_fetcher_stc_fallback.py  test_headless_fetch.py  test_job_object_key.py  test_main.py  test_openalex.py  test_openalex_downloader.py  test_scidb_downloader.py  test_stc_downloader.py  test_storage.py  test_url_guard.py  test_url_guard_redirects.py  test_webhook_timeout.py
services/nornickel-2026-parser/: .gitignore  Dockerfile  Dockerfile.api  IMPLEMENTATION_NOTES.md  clean_lock.sh  clone.sh  config.yaml.example  docker-compose.gpu.yml  docker-compose.yml  panel.sh  pyproject.toml  reindex.sh  rerun.sh  uv.lock.gpu
services/nornickel-2026-parser/admin_panel/: state.py
services/nornickel-2026-parser/admin_panel/ui/: layout.py  widgets.py
services/nornickel-2026-parser/app/config/: loader.py  models.py
services/nornickel-2026-parser/app/data/: okf_standard.py
services/nornickel-2026-parser/app/locks/: files.py
services/nornickel-2026-parser/app/observability/: logging.py  middleware.py  otel.py
services/nornickel-2026-parser/app/presentation/: http_headers.py  router.py  schemas.py  tree.py
services/nornickel-2026-parser/config/: docker.yaml  local.yaml
services/nornickel-2026-parser/docker/: entrypoint.sh
services/nornickel-2026-parser/docs/: ADMIN_PANEL.md  DOCLING.md  FAST_CLEANUP_EXAMPLE.md  LAYER_DATA.md  LAYER_INFRASTRUCTURE.md  LAYER_PRESENTATION.md  LAYER_SERVICES.md  OKF_STANDARD_EXTERNAL.md  SPECIFICATION.md
services/nornickel-2026-parser/scripts/: preload_models.py  smoke_api.sh  sync_lockfiles.sh
services/nornickel-2026-parser/tests/: conftest.py  raw_data_samples.py
services/ontology-knowledge-graph/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/ontology-knowledge-graph/ontology/: batch.py  canonicalize.py  contracts.py  ddl.sql  demo.py  hybrid_index.py  ingest_bridge.py  ingest_shared.py  loader.py  query.py  query_expand.py  router.py  service_init.py  store.py  tool_service.py
services/parse-docling/: Dockerfile  README.md  pyproject.toml
services/parse-docling/parse_docling/: __init__.py  celery_app.py  config.py  db.py  main.py  parser_client.py  tasks.py
services/parse-docling/tests/: test_parse_stub.py  test_parser_progress.py
services/science-knowledge-graph/: Dockerfile  README.md  pyproject.toml
services/science-knowledge-graph/data/: README.md  abbreviations.json  articles.json  entity_ruler_patterns.jsonl  sample_docs.json  stats.json
services/science-knowledge-graph/models/: SHA256SUMS
services/science-knowledge-graph/science_kg/: __init__.py  config.py  embeddings.py  models.py
services/science-knowledge-graph/scripts/: _ingest_lib.py  backfill_embeddings.py  build_facts_db.py  embed_facts.py  fetch_spacy_models.sh  ingest_corpus.py  ingest_shared_corpus.py  load_precomputed_facts.py  load_sample.py
services/science-knowledge-graph/tests/: test_api.py  test_ceder_extractor.py  test_embeddings.py  test_extractor.py  test_langfuse_live.py  test_langfuse_tracing.py  test_normalizer.py  test_pdf.py  test_rag.py  test_term_dictionary_patterns.py
term_dictionary/construction/: README.md  cli.py  pyproject.toml
term_dictionary/construction/data/: contract_alias_collisions.json  contract_must_link.json  wikidata_anchors.tsv  wikidata_concepts.tsv  wikidata_must_link.json  wikipedia_must_link.json  wikipedia_terms.tsv
term_dictionary/construction/scripts/: build_contract_seed.py  parse_reviews_sample.py
term_dictionary/construction/term_dict/: __init__.py  abbreviations.py  config.py  corpus.py  ontology_export.py  ontology_loader.py  pattern_filter.py  pipeline.py  schwartz_hearst.py  seed.py  synonym_cluster.py  term_extract.py  wikidata.py  wikipedia.py
term_dictionary/construction/tests/: test_abbreviations.py  test_cannot_link.py  test_corpus.py  test_ontology_export.py  test_pattern_filter.py  test_schwartz_hearst.py  test_synonym_cluster.py  test_wikidata.py  test_wikipedia.py
(+886 files in other folders)
