[project]
name = "metalcrow-benchmark"
version = "1.0.0"
description = "Automated benchmark for the RAG chat assistant over the R&D corpus"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
metalcrow-benchmark = "benchmark.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

# Standalone tool: run with the repo's shared venv; not a uv-workspace member.
[tool.uv]
managed = false
