[project]
name = "nornickel-2026-parser"
version = "0.1.0"
description = "NorNickel document parser pipeline"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0,<3",
    "PyYAML>=6.0,<7",
    "redis>=5.0,<6",
    "fastapi>=0.110,<1",
    "python-multipart>=0.0.9,<1",
    "uvicorn>=0.27,<1",
    "pytest>=8.0,<9",
    "python-dotenv>=1.0,<2",
    "httpx>=0.27,<1",
    "typer>=0.12,<1",
    "rich>=13.0,<14",
    "loguru>=0.7,<1",
    "prometheus-client>=0.20,<1",
    "opentelemetry-api>=1.27,<2",
    "opentelemetry-sdk>=1.27,<2",
    "docling>=2.14,<3",
    "easyocr>=1.7,<2",
    # Pinned explicitly so the CPU-only index below is applied (transitive-only
    # deps don't reliably pick up [tool.uv.sources]).
    "torch>=2.2,<3",
    "torchvision>=0.17,<1",
]

[project.optional-dependencies]
observability = [
    "opentelemetry-exporter-otlp-proto-http>=1.27,<2",
    "langfuse>=2.0,<3",
]

[dependency-groups]
dev = [
    "fakeredis>=2.0",
]

[tool.uv]
package = false
default-groups = ["dev"]

# Force CPU-only torch builds so the huge bundled CUDA wheels
# (nvidia-*, triton) are never pulled into the container image.
[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
