[project]
name = "ontology-knowledge-graph"
version = "0.1.0"
description = "Typed ontology sidecar over Postgres"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "psycopg[binary]>=3.2",
    "rapidfuzz>=3.9",
    "pypdf>=5.0",
    "openai>=1.60",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ontology"]

[tool.pytest.ini_options]
testpaths = ["ontology/tests"]
