[project]
name = "svc-parse-docling"
version = "0.1.0"
description = "L1 parser microservice: PDF/DOC/XLSX -> raw Markdown (SPEC_V5)"
requires-python = ">=3.11,<4.0"
dependencies = [
    "celery>=5.6.3",
    "redis>=8.0.1",
    "psycopg[binary]>=3.1.13,<4.0.0",
    "pydantic-settings>=2.2.1,<3.0.0",
    "httpx>=0.27.0",
    "tool-sdk",
    "uvicorn[standard]>=0.30.0",
]

[tool.uv.sources]
tool-sdk = { workspace = true }

[dependency-groups]
dev = [
    "pytest<10.0.0,>=7.4.3",
    "ruff<1.0.0,>=0.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["parse_docling"]
