[project]
name = "science-knowledge-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.115.1",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "neo4j>=6.2.0",
    "openai>=2.44.0",
    "pdfplumber>=0.11.10",
    "pydantic>=2.7",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "regex>=2026.6.28",
    "rich>=15.0.0",
    "scispacy>=0.6.2",
    # Pinned below scispacy's own upper bound (spacy<3.9.0,>=3.7.0): the
    # en_core_sci_sm 0.5.4 model artifact (scispaCy's latest published model
    # release — see science_kg/Dockerfile comment) was trained against
    # spaCy v3.7.4 and fails to load (ConfigValidationError, not just a
    # compat warning) under spaCy 3.8.x. Keeping the whole project on 3.7.x
    # so `uv run`/`uv sync` don't fight the model install step.
    "spacy==3.7.5",
    "typer>=0.26.7",
    "uvicorn[standard]>=0.49.0",
    # spaCy/scispaCy models — installed via uv (no pip/spacy download at build).
    "ru-core-news-sm",
    "en-core-sci-sm",
]

[tool.uv.sources]
# ru_core_news_sm 3.7.0 matches spacy==3.7.5 (see spacy-models releases).
ru-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/ru_core_news_sm-3.7.0/ru_core_news_sm-3.7.0-py3-none-any.whl" }
# Vendored: Allen AI S3 tarball is often unreachable from RU networks.
en-core-sci-sm = { path = "models/en_core_sci_sm-0.5.4.tar.gz" }

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[project.scripts]
science-knowledge-graph = "science_kg.api.app:app"
load-sample = "scripts.load_sample:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["science_kg*"]

[tool.pyright]
pythonVersion = "3.11"
