[project]
name = "advance-rag"
version = "0.1.0"
description = "FastAPI microservice for retrieval over SHARED OKF knowledge"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "loguru>=0.7,<1",
    "chromadb>=0.5,<1",
    "fuzzysearch>=0.7,<1",
    "nltk>=3.8,<4",
    "prometheus-client>=0.20,<1",
    "opentelemetry-api>=1.27,<2",
    "opentelemetry-sdk>=1.27,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.27,<2",
    "opentelemetry-instrumentation-fastapi>=0.48,<1",
    "python-dotenv>=1.0,<2",
    "PyYAML>=6.0,<7",
    "httpx>=0.27,<1",
    "python-frontmatter>=1.1,<2",
    "mcp>=1.0,<2",
    "langchain-core>=0.3,<1",
    "typer>=0.12,<1",
    "rich>=13.0,<14",
    "redis>=5.0,<6",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx>=0.27,<1",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
    "types-PyYAML>=6.0,<7",
    "fakeredis>=2.0,<3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = [".", "examples"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["nltk", "nltk.*", "fuzzysearch"]
ignore_missing_imports = true

[tool.uv]
package = false
